--- a/src/app/basket/basket.component.html
+++ b/src/app/basket/basket.component.html
@@ -19,8 +19,18 @@
           <th>Телефон</th>
           <th>Примечание</th>
           <th>Время</th>
+           <!--
           <th>Сумма</th>
+           -->
           <th>Просмотр</th>
+          <th>
+            <mat-form-field>
+              <mat-select placeholder="Статус заказа" (change)="selectOrderChange($event)" [value]="orderStatuses[0]">
+                  <mat-option style="color:red">Все заказы</mat-option>
+                  <mat-option style="color:rgb(47, 0, 255)" *ngFor="let orderStatus of orderStatuses"  [value]="orderStatus"> {{orderStatus.name}}</mat-option>
+              </mat-select>
+          </mat-form-field>
+          </th>
         </tr>
         </thead>
         <tbody>
@@ -31,13 +41,14 @@
           <td>{{item.phone}}</td>
           <td>{{item.note}}</td>
           <td>{{item.date | date:'dd.MM.yyyy H:mm'}}</td>
-          <td>Сумма</td>
+          <!-- <td>Сумма</td> -->
           <td>
             <a class="btn btn-success btn-simple btn-xs text-center " rel="tooltip" title="Редактировать"
                data-original-title="Edit Profile"  (click)="openDialog(item)">
               <i class="ti-pencil-alt"></i>
             </a>
           </td>
+         <td>{{item.status}}</td>
         </tr>
         <!---->
         </tbody>
